# cmake-learning

./: .gitignore
01_cmake_hello/: CMakeLists.txt
02_cmake_lib/: CMakeLists.txt
02_cmake_lib/xlog/: xlog.h
03_cmake_message/: CMakeLists.txt  test_message.cpp
04_cmake_variable/xlog/: CMakeLists.txt
05_cmake_include/: CMakeLists.txt
06_cmake_find_file/include/: xthread.hpp
06_cmake_find_file/src/: xlog.cpp  xthead.cc
07_cmake_target/: CMakeLists.txt  cmake_hello.cpp
09_cmake_output/test_xlog/: test_xlog.cpp
09_cmake_output/xlog/: CMakeLists.txt  xlog.h
10_cmake_add_subdirectory/: CMakeLists.txt
10_cmake_add_subdirectory/test_xlog/: CMakeLists.txt
10_cmake_add_subdirectory/xlog/: CMakeLists.txt  xlog.cpp
cmake_basic/02_cmake_lib/test_xlog/: CMakeLists.txt
cmake_basic/03_cmake_message/: log.txt
cmake_basic/06_cmake_find_file/: CMakeLists.txt  main.cpp
cmake_basic/08_cmake_debug/: CMakeLists.txt
cmake_basic/09_cmake_output/: CMakeLists.txt
cmake_basic/11_cmake_if/: CMakeLists.txt
cmake_basic/12_cmake_cache/: CMakeLists.txt
cmake_basic/12_cmake_cache/sub1/: CMakeLists.txt
cmake_basic/12_cmake_cache/sub2/: CMakeLists.txt
cmake_basic/13_cmake_property/: CMakeLists.txt
